# dowiz

./: .aider.conf.yml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .mcp.json  .size-limit.json  .sops.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTEXT-INDEX.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  DCO  DECISIONS.md  DEPLOYMENT-FIXES.md  DeliveryOS-As-Built-Summary-v1.md  DeliveryOS-Business-Value-Sort.md  DeliveryOS-Product-Goal-Alignment-Audit.md  Dockerfile  HANDOFF-2026-07-07-SESSION.md  HERMES.md  LICENSE  MASTER-ROADMAP-MVP-2026-07-12.md  MEMORY-MAP.md  MEMORY.md  NOTICE  OLLAMA_SETUP.md  PRODUCT.md  PROJECT-VIEW-2026-07-08.md  README.md  RESEARCH-transport-dtn-mesh.md  SECURITY.md  TOOLING-REGISTRY.md  (+76 more)
agent-adapters/: Cargo.toml  ZERO-DEP-ALLOWLIST.txt
agent-adapters/benches/: BENCH_HISTORY.md  baseline.json  fuel_bench.rs
agent-adapters/src/: cache.rs  dispatch.rs  fuel.rs  lib.rs  manifest.rs  mcp.rs  quirks.rs  transport.rs
agent-adapters/tests/: e2e_admission.rs
agent-facade/: Cargo.toml  ZERO-DEP-ALLOWLIST.txt
agent-facade/src/: lib.rs
agent-governance-wasm/: Cargo.toml
agent-governance-wasm/src/: lib.rs
agent-loop/: Cargo.toml  ZERO-DEP-ALLOWLIST.txt
agent-loop/src/: lib.rs  main.rs  service.rs  service_main.rs
agent-loop/tests/: adversarial.rs  service.rs
apps/courier/: Cargo.toml
engine/: Cargo.toml
engine/benches/: criterion.rs
engine/src/: a11y_native.rs  approach.rs  bridge.rs  checkout.rs  clock.rs  compose_ui.rs  cost.rs  engine_loop.rs  environment.rs  field_energy.rs  field_frame.rs  field_modal.rs  friction.rs  geo_map.rs  gpu_atomicity.rs  hooks.rs  intent.rs  lib.rs  loop_.rs  mode.rs  money_guard.rs  motion.rs  offline.rs  onboarding.rs  oracle.rs  order_arc.rs  ranker_academia.rs  route_cache.rs  satellite.rs  scene.rs  screens.rs  sdf.rs  semantics.rs  text_scope.rs  vendor.rs  vendor_assets.rs  voice.rs  widget_store.rs  zerocopy.rs
engine/tests/: field_integration.rs  floor_parity.rs  loop_wires_intent_router.rs  p89_field_modal_wired.rs  pixel_verify.rs  shader_audit.rs
intake-adapters/: Cargo.toml
intake-adapters/src/: lib.rs  telegram.rs
kernel/: Cargo.toml  ZERO-DEP-ALLOWLIST.txt  cross_pattern_analysis.py  prompt_enrich_db.jsonl  skill_armory_stats.jsonl
kernel/benches/: .gitignore  BENCH_RESULTS.md  ITEM-33-RECONCILIATION.md  absorbing.rs  baseline.json  batching.rs  bench_track.py  bench_trend.json  contention.rs  criterion.rs  enrich_lookup.rs  kernel_crypto_pq.rs  mesh_verify.rs  money_ledger.rs  ppr.rs  retrieval_geo.rs  spectral_math.rs  trinary_ops.rs
kernel/examples/: bench_hh.rs  bench_p99.rs  canary_spans.rs  gen_real_spans.rs  gen_real_spans_pq.rs  pmu_probe.rs
kernel/fuzz/: Cargo.toml
kernel/mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json
kernel/mutants.out.old/: caught.txt  lock.json  mutants.json  outcomes.json
kernel/pkg/: dowiz_kernel.d.ts  dowiz_kernel.js  dowiz_kernel_bg.wasm  dowiz_kernel_bg.wasm.d.ts
kernel/pkg-web/: dowiz_kernel.d.ts  dowiz_kernel.js  dowiz_kernel_bg.wasm  dowiz_kernel_bg.wasm.d.ts
kernel/src/: absorbing.rs  academia.rs  academia_agent.rs  academia_cloud.rs  academia_p2p.rs  academy_store.rs  agc_scheduler.rs  agent_browser.rs  agent_orchestrator.rs  analytics.rs  arena.rs  attention.rs  autonomic.rs  autonomic_pmu.rs  backup.rs  bebop_bridge.rs  blocklist.rs  bounded_drainer.rs  budget.rs  capability_cert.rs  cart.rs  catalog.rs  causal.rs  cgraph.rs  channel.rs  chaos.rs  chronos.rs  chronos_topology.rs  chunker.rs  clock_stabilizer.rs  code_oracle.rs  cooperation_protocol.rs  core_pinning.rs  cpuid.rs  cross_bridge.rs  cross_tests.rs  crypto_signer.rs  crystal.rs  csr.rs  ct_gate.rs  (+121 more)
kernel/tests/: auto_branch_coverage.rs  backup_wire.rs  bebop_property_tests.rs  bebop_session_crypto.rs  blocklist_wire.rs  cap_verify_wire.rs  fdr_item48_blind_spot.rs  fdr_kill9.rs  firewall_p47.rs  fsm_boot.rs  hub_supervisor_wire.rs  idempotency_gate.rs  invariant_fuzz.rs  item26_latency_probe.rs  json_oracle.rs  json_query_e2e.rs  kem_ref_dump.rs  landing_no_vendor_catalog.rs  markov_pmu_fdr.rs  moderation_wire.rs  no_card_data.rs  span_metrics_init_wire.rs  verify_chain_wire.rs
llm-adapters/: .gitignore  Cargo.toml  ZERO-DEP-ALLOWLIST.txt
llm-adapters/benches/: baseline.json  criterion.rs
llm-adapters/src/: bebop.rs  cache.rs  compose.rs  dispatch.rs  lib.rs  managed.rs  ollama.rs  quirks.rs  telemetry.rs  transport.rs
llm-adapters/tests/: agent_loop_e2e.rs  golden_toolcalls.rs  golden_toolcalls_fixtures.json  ollama_roundtrip.rs
mesh-adapter/: Cargo.toml  ZERO-DEP-ALLOWLIST.txt
mesh-adapter/proofs/: firewall-red.patch  firewall-red.sh
mesh-adapter/src/: lib.rs
mesh-adapter/tests/: claims.rs  edge.rs  firewall.rs  matcher.rs  solo_island.rs  vocabulary.rs
node/: Cargo.toml
node/src/: lib.rs  roles.rs  sim.rs  store.rs  sync.rs  transport.md  transport.rs
payment-adapters/: Cargo.toml
payment-adapters/src/: lib.rs
rebuild/: .dockerignore  .gitignore  Cargo.toml  README.md  deny.toml
rebuild/scripts/: sovereign-gate.sh
rebuild/web/: .dockerignore  .gitignore  ISLAND-BUDGET-OPTIONS.md  README.md  astro.config.mjs  package.json  package.json.pending  pnpm-lock.yaml  tsconfig.json
server/: .gitignore  Cargo.toml
server/src/: lib.rs  main.rs  models.rs  notify.rs  reliability.rs  routes.rs  store.rs
server/tests/: integration.rs
tools/async-spool/: Cargo.toml  ZERO-DEP-ALLOWLIST.txt
tools/ci-truth/: Cargo.toml
tools/deep-clean/: Cargo.toml  ZERO-DEP-ALLOWLIST.txt
tools/eqc-rs/: Cargo.toml  README.md
tools/native-spa-server/: .gitignore  Cargo.toml  ZERO-DEP-ALLOWLIST.txt
tools/nfc-pod-codec/: Cargo.toml  ZERO-DEP-ALLOWLIST.txt
tools/nfc-pod-flipper/: Cargo.toml  ZERO-DEP-ALLOWLIST.txt
tools/ops-alert/: Cargo.toml  bench-drift  deadman-check  fences.toml  ledger-verify  offsite-copy.sh  span-p99
tools/shell-spike/: Cargo.toml  ZERO-DEP-ALLOWLIST.txt
wasm/: Cargo.toml  ZERO-DEP-ALLOWLIST.txt
wasm/src/: lib.rs
(+4393 files in other folders)
