[package]
name = "agent-facade"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "P40 agent facade — the ONLY crate in the agent lane that imports dowiz-kernel. Re-exports the llm + tool port surfaces and owns the one concrete tool (read_order_status). Kernel mutation symbols are not re-exported — agent-loop cannot name decide/fold/apply_tax/stores."

# Standalone crate at repo root (sibling to kernel/), NOT a workspace member.
# Build with `cargo build` from this directory.

[dependencies]
dowiz-kernel = { path = "../kernel" }
# serde + serde_json REMOVED (roadmap item 31 §4.4 Phase-A cutover): the one parse site
# (ReadOrderStatusTool::parse_arg) now uses the kernel-owned `dowiz_kernel::json` primitive
# (differentially proven vs serde_json — kernel/tests/json_oracle.rs). `cargo tree -e no-dev`
# no longer carries serde/serde_json; this crate's ZERO-DEP-ALLOWLIST.txt shrinks accordingly.

[lib]
name = "agent_facade"
path = "src/lib.rs"
