[package]
name = "agent-loop"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "P40 AgentLoop executor — bounded plan→act→observe over a tool-calling LLM backend. Imports ONLY agent-facade (no direct dowiz-kernel dependency — compile firewall)."

# Standalone crate at repo root (sibling to kernel/), NOT a workspace member.

[dependencies]
agent-facade = { path = "../agent-facade" }

[dev-dependencies]
criterion = "0.5"

[lib]
name = "agent_loop"
path = "src/lib.rs"
