[package]
name = "dowiz-engine"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "dowiz field-ui engine core (FE-01/02/03): zero-copy numeric bridge, SoA DOD store + ParticlePool ring, fixed-timestep accumulator. Pure Rust, offline-clean, headless-testable. The TS/JS UI is the legacy oracle; this is the canonical render engine."
# NO dependencies — offline-clean by mandate. GPU is a display surface; authoritative
# compute is CPU-side (scalar == SIMD bit-identical). wgpu/cosmic-text are OUT OF SCOPE
# here (added behind features later) so the default build has zero external crates.

[lib]
name = "dowiz_engine"
path = "src/lib.rs"

[dependencies]
# Local path dependency on the deterministic kernel so the engine's VertexBridge
# can drive the graph-Laplacian field (W2-2: `laplacian_spmv`) directly on the
# CPU. This is the SAME local-crate relationship `agent-governance-wasm` uses; no
# external/wgpu/serde crate is introduced, so the engine stays offline-clean.
# The kernel's own deps (tracing/regex) are already in-tree and cached.
dowiz-kernel = { path = "../kernel", version = "0.1.0" }

# P57 Lane B (O18a only). Optional: the default build links NO cosmic-text.
cosmic-text = { version = "*", optional = true }

[features]
# default = offline-clean. GPU/wasm glue is opt-in so CI never pulls a GPU/JS toolchain.
default = []
# GPU upload sink (W20). EMPTY by design: `wgpu` is absent from the cargo cache
# and every Cargo.lock (verified 2026-07-16), so adding it would break the
# air-gapped offline build. The flag exists so the boundary is real; the real
# adapter is an honest `Err("gpu adapter not built — wgpu uncached")` stub
# (engine/src/bridge.rs::gpu::new_gpu). When `cargo add wgpu` succeeds (network),
# implement the real `wgpu::Device`/`Queue` sink here and flip new_gpu to build it.
gpu = []
# P11 §5 (E23 scaffolding): WebGL render boundary, EMPTY by design — no deps pulled.
webgl = []
# P11 §5 (E23 scaffolding): WebGPU render boundary, EMPTY by design — no deps pulled.
webgpu = []
# P11 §5 (E23 scaffolding): Gaussian-splat reconstruction boundary, EMPTY by design — no deps pulled.
splat = []
# P57 M2/M5: cosmic-text text-model + shaping leg. EMPTY by design: `cosmic-text`
# is OUT OF SCOPE here (added behind this feature only at O18a) so the default
# build stays offline-clean with zero external crates — the SAME one network
# grant as `gpu` (P38 §2). The full P57 editor (`text_input::TextField`) is
# implemented Lane-A (dependency-free) and ALWAYS built; this feature gates
# ONLY the cosmic-text shaping seam (`text_input::cosmic_text`), which stays
# OFF until the operator unlocks the network grant.
text = ["dep:cosmic-text"]

[dev-dependencies]

