[package]
name = "dowiz-engine"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "dowiz field-ui engine core (FE-01/02/03): zero-copy numeric bridge, SoA DOD store + ParticlePool ring, fixed-timestep accumulator. Pure Rust, offline-clean, headless-testable. The TS/JS UI is the legacy oracle; this is the canonical render engine."
# NO dependencies — offline-clean by mandate. GPU is a display surface; authoritative
# compute is CPU-side (scalar == SIMD bit-identical). wgpu/cosmic-text are OUT OF SCOPE
# here (added behind features later) so the default build has zero external crates.

[lib]
name = "dowiz_engine"
path = "src/lib.rs"

[dependencies]
# Local path dependency on the deterministic kernel so the engine's VertexBridge
# can drive the graph-Laplacian field (W2-2: `laplacian_spmv`) directly on the
# CPU. This is the SAME local-crate relationship `agent-governance-wasm` uses; no
# external/wgpu/serde crate is introduced, so the engine stays offline-clean.
# The kernel's own deps (tracing/regex) are already in-tree and cached.
dowiz-kernel = { path = "../kernel", version = "0.1.0" }
# P58 §M2/M4 (wasm mirror export + future native adapter): `serde` is OPTIONAL and
# OFFLINE-CACHED. It is NOT pulled into the default build (engine stays
# zero-external-crate, matching the offline-clean mandate). The `wasm` crate
# enables `features = ["serde"]` so the `A11yTree` can cross the wasm boundary as
# JSON; the `a11y_native` path will enable it too once the AK-unlock grant lands.
serde = { version = "1", optional = true, features = ["derive"] }

# P57 Lane B (O18a only). Optional: the default build links NO cosmic-text.
cosmic-text = { version = "*", optional = true }

[features]
# default = offline-clean. GPU/wasm glue is opt-in so CI never pulls a GPU/JS toolchain.
default = []
# P58 §M2 — (de)serialize the `SemanticScene`/`A11yTree` across the wasm boundary.
# Optional; only the `wasm` crate enables it, so the default engine build stays clean.
serde = ["dep:serde"]
# P58 §M4 — native AccessKit adapter. PRE-UNLOCK: the real `accesskit*` crates are
# NOT in the cargo cache (AK-unlock network grant pending), so this feature is
# declared but the adapter body is empty by default and compiles zero AccessKit
# code. The offline gates (role-totality / EditState bounds / composing-refused)
# are tested now; the `to_tree_update`/`apply_action` AccessKit bodies land with
# the grant. Declaring the feature early keeps the boundary real and CI-honest.
a11y_native = ["serde"]
# GPU upload sink (W20). EMPTY by design: `wgpu` is absent from the cargo cache
# and every Cargo.lock (verified 2026-07-16), so adding it would break the
# air-gapped offline build. The flag exists so the boundary is real; the real
# adapter is an honest `Err("gpu adapter not built — wgpu uncached")` stub
# (engine/src/bridge.rs::gpu::new_gpu). When `cargo add wgpu` succeeds (network),
# implement the real `wgpu::Device`/`Queue` sink here and flip new_gpu to build it.
gpu = []
# P11 §5 (E23 scaffolding): WebGL render boundary, EMPTY by design — no deps pulled.
webgl = []
# P11 §5 (E23 scaffolding): WebGPU render boundary, EMPTY by design — no deps pulled.
webgpu = []
# P11 §5 (E23 scaffolding): Gaussian-splat reconstruction boundary, EMPTY by design — no deps pulled.
splat = []
# P57 M2/M5: cosmic-text text-model + shaping leg. EMPTY by design: `cosmic-text`
# is OUT OF SCOPE here (added behind this feature only at O18a) so the default
# build stays offline-clean with zero external crates — the SAME one network
# grant as `gpu` (P38 §2). The full P57 editor (`text_input::TextField`) is
# implemented Lane-A (dependency-free) and ALWAYS built; this feature gates
# ONLY the cosmic-text shaping seam (`text_input::cosmic_text`), which stays
# OFF until the operator unlocks the network grant.
text = ["dep:cosmic-text"]
# P64 M5 — voice: wake + Moonshine streaming + Whisper multilingual fallback.
# EMPTY by design: the real `moonshine`/`whisper.cpp` model crates are NOT in
# the cargo cache (no network grant), so the `voice` feature compiles ZERO ASR
# model code by default — only the offline stubs + gates (wake-gate battery
# lever, locale→model selection, voice-never-bypasses-friction) are built and
# tested. The real model bodies land behind this same flag once the grant lands.
# Adding an external dep here would break the air-gapped offline build, so none
# is added (the feature exists so the boundary is real and CI-honest).
voice = []

[dev-dependencies]
# Benchmarking harness (P81 — engine crate's FIRST bench). Mirrors the kernel
# crate's dev-dep pin (criterion 0.5.1, cached offline). Benchmarks only — never
# linked into a production build path. The `<group>/<n>` bench-id convention is
# owned by P75 (P81/P80/P82 cite it) and consumed by kernel/benches/bench_track.py.
criterion = "0.5"

[[bench]]
name = "criterion"
harness = false

