[package]
name = "intake-adapters"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "P48-INTAKE: channel-agnostic inbound order-intake adapters (Telegram, Meta). Compile firewall: produces InboundMessage, never calls place_order."

[dependencies]
dowiz-kernel = { path = "../kernel" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
