[package]
name = "dowiz-kernel"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "dowiz deterministic core: order-state machine (decide/fold Law) + integer money. Rust→WASM. The TS app is the legacy oracle; this is the canonical kernel."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# `std` (default) enables runtime CPU-feature detection for the FMA eigensolver
# kernel. Disable (`--no-default-features`) for a no-std embedding: the solver's
# hot path is stack-only and falls back to compile-time target_feature / scalar.
default = ["std"]
std = []
# `json-api` = the JSON string boundary WITHOUT wasm-bindgen. It pulls the SAME
# serde/serde_json the `wasm` surface needs for the order (de)serialization, but
# no browser glue — so the native HTTP adapter (native-spa-server) and the wasm
# JS surface share ONE JSON authority (`kernel/src/json_api.rs`). The default
# kernel build stays serde-free (verified via `cargo tree -p dowiz-kernel
# --no-default-features -e no-dev | grep -c serde` → 0). `wasm` becomes a
# superset of `json-api` so the browser surface is unchanged.
json-api = ["dep:serde", "dep:serde_json"]
# `wasm` pulls the wasm-bindgen JS glue + the serde (de)serialization it needs.
# OFF by default so a native rlib consumer (e.g. bebop-delivery-domain) links the
# kernel WITHOUT wasm-bindgen / serde / serde_json / serde_yaml in its graph.
# The kernel's decide/order_machine/domain/money core is pure-Rust and
# feature-independent. `loops` + `living_knowledge` are serde-dependent, so they
# ride behind this feature (the only one that enables serde) to keep the native
# build serde-free; neither is part of the canonical order/money core.
wasm = ["json-api", "dep:wasm-bindgen", "dep:serde_yaml"]
# `chaos` — the zero-dependency deterministic fault-injection harness (P-H W-H1).
# OFF by default so production artifacts carry NO chaos symbols (the whole
# `chaos` module is `#[cfg(any(test, feature = "chaos"))]`); a release build
# compiles the injection machinery to `()`, unrepresentable-at-the-boundary.
chaos = []
# `pgrust` is the OPTIONAL Postgres SQL adapter for the living-memory store
# (M4/W4-1). OFF by default so the kernel stays pure-`std` with no network
# deps; the default `InMemoryStore` is native std-only. Behind this flag,
# `retrieval/memory_store.rs` compiles a REAL sqlx-backed `PgStore` (see its
# `migrate()` for the explicit, opt-in DDL — never auto-run).
pgrust = ["dep:sqlx", "dep:tokio"]
# `pq` — KAT-gated post-quantum crypto core (ML-DSA-65 / ML-KEM-768 / X25519 /
# AES-GCM volume), zero external PQ crates, byte-exact vs NIST ACVP vectors.
# OFF by default so the canonical order/money core stays pure-`std` and
# serde-free; `pq` is an OPT-IN subsystem (mesh/transport identity seam), not
# part of the decide/fold Law. `serde`/`aes-gcm`/`curve25519-dalek` ride ONLY
# behind this feature (same discipline as `wasm`).
pq = ["dep:serde", "dep:serde_json", "dep:aes-gcm", "dep:curve25519-dalek"]
# `gpu` — P38 O18a graphics unlock. OFF by default so the canonical order/money
# core and the wasm cdylib stay lean and GPU-free. Behind this flag,
# `render/gpu.rs` compiles a REAL headless wgpu bring-up (Instance→Adapter→
# Device). `wgpu`'s adapter request is async, so `pollster` rides the same flag
# to block_on it from the synchronous kernel boundary (no async runtime pulled
# into the default build). The default build compiles `render` to nothing.
gpu = ["dep:wgpu", "dep:pollster"]

# innovate: rsa 0.9.x (RUSTSEC-2023-0071, Marvin timing) appears in Cargo.lock but
# `cargo tree -i rsa` prints nothing — it is NOT linked into any active build path
# (neither default nor pgrust). "No fixed upgrade available" + zero code usage =
# no real exposure. Decision (2026-07-16, C-triage): do NOT force-upgrade; revisit
# only if a future dep actually pulls rsa into the kernel graph. Upgrade trigger:
# `cargo tree -i rsa` shows a real path OR a patched rsa release ships.

[dependencies]
# WASM bindings — only compiled under the `wasm` feature (see
# `#[cfg(feature = "wasm")] pub mod wasm;` in lib.rs). The kernel is pure Rust
# and usable headless + as a native rlib without this.
wasm-bindgen = { version = "0.2", optional = true }
# JSON/YAML (de)serialization for the wasm-bindgen JS glue + the serde-dependent
# modules (`loops`, `living_knowledge`). Feature-gated (see `wasm` feature) so a
# native rlib build pulls NONE of them. `pq` reuses `serde` (derive) under its
# own feature flag.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
# SQL adapter (Postgres) — ONLY compiled under the `pgrust` feature so the
# default kernel stays pure-`std` / network-free. sqlx 0.8.6 is cached offline;
# the runtime is Tokio (also gated) to drive the async pool from the
# synchronous `MemoryStore` trait boundary.
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
# PQ subsystem deps — OPTIONAL, only linked under the `pq` feature.
aes-gcm = { version = "0.10.3", features = ["std"], optional = true }
curve25519-dalek = { version = "4", optional = true }
# Structured telemetry: spans/events over the hot paths (order fold, place_order).
# Gated to non-wasm so the wasm cdylib stays lean; native/rlib tests get full traces.
tracing = "0.1"
# L0 exact-search verify step (trigram inverted-index narrows candidates,
# regex verifies each — deterministic, 0 false positives). Blueprint M1/W1-3.
regex = "1"
# Pretty env-filter subscriber for `init_tracing()` (shipped; dev/CLI only, never called from wasm).
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# GPU render backend (P38 O18a) — ONLY compiled under the `gpu` feature so the
# default kernel carries zero GPU symbols (feature-additive; guard-restorable).
wgpu = { version = "30.0.0", optional = true }
# Minimal executor to block_on wgpu's async adapter/device requests from the
# synchronous kernel boundary — gated with `gpu`, never in the default graph.
pollster = { version = "1.0.1", optional = true }

[dev-dependencies]
# Benchmarking harness for real latency/throughput telemetry on the hot paths.
criterion = "0.5"
# PQ KAT test macro expansion (dsa_acvp_tests.rs) — dev-only, not in any build path.
paste = "1.0"
# Property-test harness for the P47 reconciliation invariant (B3) — arbitrary order
# sequences folded vs. settlement totals, exact-i64 equality. Cached offline (1.11.0),
# dev-only, never linked into a production build path.
proptest = "1.11"

[[bench]]
name = "criterion"
harness = false

# Native-kernel living-memory retrieval CLI — the max-speed replacement for the
# out-of-tree living_memory.py (177ms Python/query). Links dowiz_kernel directly,
# ranks the live memory corpus with the in-kernel BM25+trigram fusion in-process.
[[bin]]
name = "lm"
path = "src/bin/lm.rs"

# Native-kernel Markov attractor detector CLI — replaces the out-of-tree
# tools/loop-signals/markov_attractor.py (now deleted; kernel `markov` module is
# the port, with VbM parity tests). Emits the exact JSON contract check.sh parses.
[[bin]]
name = "markov_attractor"
path = "src/bin/markov_attractor.rs"

[profile.release]
opt-level = 3
lto = true
